--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,4 @@ Django==3.2.7
 gunicorn==20.1.0
 psycopg2==2.9.1
 whitenoise==5.3.0
-import django_heroku
-django_heroku.settings(locals())
+django-heroku==0.3.1
