--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,21 @@
+asgiref==3.4.1
+backports.entry-points-selectable==1.1.0
+certifi==2021.5.30
+chardet==3.0.4
+distlib==0.3.2
 dj-database-url==0.5.0
 Django==3.2.7
-gunicorn==20.1.0
-psycopg2==2.9.1
-whitenoise==5.3.0
 django-heroku==0.3.1
+filelock==3.0.12
+gunicorn==20.1.0
+idna==2.10
+platformdirs==2.3.0
+psycopg2==2.9.1
+PyMySQL==1.0.2
+pytz==2021.1
+requests==2.23.0
+six==1.16.0
+sqlparse==0.4.2
+urllib3==1.25.11
+virtualenv==20.7.2
+whitenoise==5.3.0
